--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
         </nav>
       </nav>
 
-      <aside class="aside gridItem">
+      <main class="main-um gridItem">
         <div class="sub">
           <ul class="sub-ul">
             <li>
@@ -45,7 +45,7 @@
           <p>Lorem ipsum dolor sit amet, ullamco</p>
           <button class="btn-sub">cadastrar</button>
         </div>
-      </aside>
+      </main>
 
       <main class="main gridItem">
         <div class="login">
