--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+
     <link rel="stylesheet" href="/style/estilos-comuns/reset.css">
     <link rel="stylesheet" href="/style/estilos-comuns/style.css">
     <link rel="stylesheet" href="/style/paginas/home.css">
