--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./style/paginas/login.css">
-    <link rel="stylesheet" href="/style/estilos-comuns/reset.css">
-    <link rel="stylesheet" href="/style/estilos-comuns/style.css">
-    <link rel="stylesheet" href="/style/paginas/home.css">
+    <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+
+    <link rel="stylesheet" href="./style/paginas/login/login.css">
+    
     <title>Faça Login</title>
   </head>
   <body>
