--- a/decorações-e-eventos.html
+++ b/decorações-e-eventos.html
@@ -61,6 +61,90 @@
 
     </section>
 
+    <section class="aniversarios-casamentos">
+      <div class="aniversarios-casamentos__container">
+          <span class="aniversarios-casamento-titulo__principal"> Aniversários </span>
+      </div>
+
+      <div class="cards-container">
+          <div class="card">
+            <img src="/images/flor1.jpg" alt="Flor 1">
+            <h2 class="card-title">Flor 1</h2>
+            <span class="card-price">R$ 10,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor2.jpg" alt="Flor 2">
+            <h2 class="card-title">Flor 2</h2>
+            <span class="card-price">R$ 15,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor3.jpg" alt="Flor 3">
+            <h2 class="card-title">Flor 3</h2>
+            <span class="card-price">R$ 12,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor1.jpg" alt="Flor 1">
+            <h2 class="card-title">Flor 1</h2>
+            <span class="card-price">R$ 10,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor2.jpg" alt="Flor 2">
+            <h2 class="card-title">Flor 2</h2>
+            <span class="card-price">R$ 15,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor3.jpg" alt="Flor 3">
+            <h2 class="card-title">Flor 3</h2>
+            <span class="card-price">R$ 12,00 (por haste)</span>
+          </div>
+          <!-- Adicione mais cards aqui conforme necessário -->
+        </div>
+
+  </section>
+
+  <section class="aniversarios-casamentos">
+    <div class="aniversarios-casamentos__container">
+        <span class="aniversarios-casamento-titulo__principal"> Casamentos </span>
+        <div class="aniversarios-casamentos-barra__inferior"></div>
+    </div>
+
+    <div class="cards-container">
+        <div class="card">
+          <img src="/images/flor1.jpg" alt="Flor 1">
+          <h2 class="card-title">Flor 1</h2>
+          <span class="card-price">R$ 10,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor2.jpg" alt="Flor 2">
+          <h2 class="card-title">Flor 2</h2>
+          <span class="card-price">R$ 15,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor3.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor1.jpg" alt="Flor 1">
+          <h2 class="card-title">Flor 1</h2>
+          <span class="card-price">R$ 10,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor2.jpg" alt="Flor 2">
+          <h2 class="card-title">Flor 2</h2>
+          <span class="card-price">R$ 15,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor3.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <!-- Adicione mais cards aqui conforme necessário -->
+      </div>
+
+</section>
+
+
     <footer class="footer gridItem">
         <ul>
             <li><a href="">Faq</a></li>
