--- a/arranjos-personalizados.html
+++ b/arranjos-personalizados.html
@@ -29,8 +29,8 @@
 
     <section class="imagem-titulo">
         <div class="titulo__imagem">
-            <span class="imagem-titulo_principal">Decorações e Eventos</span>
-            <img class="imagem__principal" src="/images/deco.jpeg" alt="">
+            <span class="imagem-titulo_principal">Arranjos Personalizados</span>
+            <img class="imagem__principal" src="/images/arranjos persona.jpeg" alt="">
         </div>
     </section>
 
@@ -63,7 +63,7 @@
 
     <section class="aniversarios-casamentos">
       <div class="aniversarios-casamentos__container">
-          <span class="aniversarios-casamento-titulo__principal"> Aniversários </span>
+          <span class="aniversarios-casamento-titulo__principal"> Arranjos Masculinos </span>
       </div>
 
       <div class="cards-container">
@@ -104,7 +104,7 @@
 
   <section class="aniversarios-casamentos">
     <div class="aniversarios-casamentos__container">
-        <span class="aniversarios-casamento-titulo__principal"> Casamentos </span>
+        <span class="aniversarios-casamento-titulo__principal"> Arranjos Artificiais </span>
         <div class="aniversarios-casamentos-barra__inferior"></div>
     </div>
 
@@ -143,6 +143,50 @@
       </div>
 
 </section>
+
+<section class="aniversarios-casamentos">
+    <div class="aniversarios-casamentos__container">
+        <span class="aniversarios-casamento-titulo__principal"> Arranjos Classicos </span>
+        <div class="aniversarios-casamentos-barra__inferior"></div>
+    </div>
+
+    <div class="cards-container">
+        <div class="card">
+          <img src="/images/flor1.jpg" alt="Flor 1">
+          <h2 class="card-title">Flor 1</h2>
+          <span class="card-price">R$ 10,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor2.jpg" alt="Flor 2">
+          <h2 class="card-title">Flor 2</h2>
+          <span class="card-price">R$ 15,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor3.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor1.jpg" alt="Flor 1">
+          <h2 class="card-title">Flor 1</h2>
+          <span class="card-price">R$ 10,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor2.jpg" alt="Flor 2">
+          <h2 class="card-title">Flor 2</h2>
+          <span class="card-price">R$ 15,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor3.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <!-- Adicione mais cards aqui conforme necessário -->
+      </div>
+
+</section>
+
+
 
 
     <footer class="footer gridItem">
