se não for agora, tento mais tarde

--- a/login.html
+++ b/login.html
@@ -29,19 +29,8 @@
         </nav>
       </nav>
 
-      <main class="main-um gridItem">
+      <main class="main-um ">
         <div class="sub">
-          <ul class="sub-ul">
-            <li>
-              <a class="icon-footer" href=""><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-              <a class="icon-footer" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
-            </li>
-          </ul>
-
           <p>Lorem ipsum dolor sit amet, ullamco</p>
           <button class="btn-sub">cadastrar</button>
         </div>
