talvez de certo

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
       <nav class="nav gridItem">
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="">Home</a></li>
+            <li><a class="nav-home" href="/index.html">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
@@ -49,20 +49,19 @@
           </div>
         </div>
       </main>
-      <footer class="footer gridItem">
-        <ul>
-            <li><a href="">Faq</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Contato</a></li>
-        </ul>
-
-        <ul>
-            <li><a class="icon-footer" href=""><i class="fab fa-facebook"></i></a></li>
-            <li><a class="icon-footer" href=""><i class="fab fa-instagram"></i></a></li>
-        </ul>
-
-        <ul><li><a href="">CNPJ ou Razão Social</a></li></ul>
-      </footer>
     </div>
+    <footer class="footer gridItem">
+      <ul>
+          <li><a href="">Faq</a></li>
+          <li><a href="">Sobre</a></li>
+          <li><a href="">Contato</a></li>
+      </ul>
+
+      <ul>
+          <li><a class="icon-footer" href=""><i class="fab fa-facebook"></i></a></li>
+          <li><a class="icon-footer" href=""><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <ul><li><a href="">CNPJ ou Razão Social</a></li></ul>
+    </footer>
   </body>
 </html>
