--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav class="nav gridItem">
         <nav class="nav gridItem">
           <ul>
+            <li><a class="nav-home__login" href="">Login</a></li>
             <li><a class="nav-home" href="">Home</a></li>
             <li><a class="nav-home" href="">Sobre</a></li>
             <li><a class="nav-home" href="">Portifólio</a></li>
@@ -53,32 +54,32 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="/images/flor1.jpg" alt="Flor 1">
+              <img src="/images/florestropicais (22).jpeg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor2.jpg" alt="Flor 2">
+              <img src="/images/florestropicais (21).jpeg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor3.jpg" alt="Flor 3">
+              <img src="/images/florestropicais (14).jpeg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
             <div class="card">
-                <img src="/images/flor1.jpg" alt="Flor 1">
+                <img src="/images/florestropicais (15).jpeg" alt="Flor 1">
                 <h2 class="card-title">Flor 1</h2>
                 <span class="card-price">R$ 10,00 (por haste)</span>
               </div>
               <div class="card">
-                <img src="/images/flor2.jpg" alt="Flor 2">
+                <img src="/images/florestropicais (16).jpeg" alt="Flor 2">
                 <h2 class="card-title">Flor 2</h2>
                 <span class="card-price">R$ 15,00 (por haste)</span>
               </div>
               <div class="card">
-                <img src="/images/flor3.jpg" alt="Flor 3">
+                <img src="/images/florestropicais (17).jpeg" alt="Flor 3">
                 <h2 class="card-title">Flor 3</h2>
                 <span class="card-price">R$ 12,00 (por haste)</span>
               </div>
