--- a/decorações-e-eventos.html
+++ b/decorações-e-eventos.html
@@ -42,17 +42,17 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="/images/flor1.jpg" alt="Flor 1">
+              <img src="/images/florestropicais (7).jpeg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor2.jpg" alt="Flor 2">
+              <img src="/images/flor-casamento.jpg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor3.jpg" alt="Flor 3">
+              <img src="/images/wedding-g4aa7ae428_1280.jpg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
@@ -60,47 +60,6 @@
           </div>
 
     </section>
-
-    <section class="aniversarios-casamentos">
-      <div class="aniversarios-casamentos__container">
-          <span class="aniversarios-casamento-titulo__principal"> Aniversários </span>
-      </div>
-
-      <div class="cards-container">
-          <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
-            <h2 class="card-title">Flor 1</h2>
-            <span class="card-price">R$ 10,00 (por haste)</span>
-          </div>
-          <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
-            <h2 class="card-title">Flor 2</h2>
-            <span class="card-price">R$ 15,00 (por haste)</span>
-          </div>
-          <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
-            <h2 class="card-title">Flor 3</h2>
-            <span class="card-price">R$ 12,00 (por haste)</span>
-          </div>
-          <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
-            <h2 class="card-title">Flor 1</h2>
-            <span class="card-price">R$ 10,00 (por haste)</span>
-          </div>
-          <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
-            <h2 class="card-title">Flor 2</h2>
-            <span class="card-price">R$ 15,00 (por haste)</span>
-          </div>
-          <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
-            <h2 class="card-title">Flor 3</h2>
-            <span class="card-price">R$ 12,00 (por haste)</span>
-          </div>
-          <!-- Adicione mais cards aqui conforme necessário -->
-        </div>
-
-  </section>
 
   <section class="aniversarios-casamentos">
     <div class="aniversarios-casamentos__container">
@@ -110,32 +69,47 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="/images/florestropicais (2).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="/images/florestropicais (6).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="/images/florestropicais (7).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="/images/wedding-g4aa7ae428_1280.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="/images/beach-gf8c4dcee9_1920.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="/images/flor-casamento.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/floresdec-1.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/floresdec-2.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/floresdec-3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
