--- a/decorações-e-eventos.html
+++ b/decorações-e-eventos.html
@@ -19,7 +19,7 @@
 
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="">Home</a></li>
+            <li><a class="nav-home" href="index.html">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
