--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -19,7 +19,7 @@
 
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="">Home</a></li>
+            <li><a class="nav-home" href="index">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
@@ -42,17 +42,17 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="/images/flor1.jpg" alt="Flor 1">
+              <img src="/images/namorados-11.jpg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor2.jpg" alt="Flor 2">
+              <img src="/images/maes-3.jpg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor3.jpg" alt="Flor 3">
+              <img src="/images/namorados-6.jpg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
@@ -68,32 +68,32 @@
 
       <div class="cards-container">
           <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
+            <img src="/images/namorados1.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
+            <img src="/images/namorados-2.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
+            <img src="/images/namorados-3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
+            <img src="/images/namorados-11.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
+            <img src="/images/namorados-5.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
+            <img src="/images/namorados-6.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -101,48 +101,6 @@
         </div>
 
   </section>
-
-  <section class="aniversarios-casamentos">
-    <div class="aniversarios-casamentos__container">
-        <span class="aniversarios-casamento-titulo__principal"> Avô e Avó </span>
-        <div class="aniversarios-casamentos-barra__inferior"></div>
-    </div>
-
-    <div class="cards-container">
-        <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
-          <h2 class="card-title">Flor 1</h2>
-          <span class="card-price">R$ 10,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
-          <h2 class="card-title">Flor 2</h2>
-          <span class="card-price">R$ 15,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
-          <h2 class="card-title">Flor 3</h2>
-          <span class="card-price">R$ 12,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
-          <h2 class="card-title">Flor 1</h2>
-          <span class="card-price">R$ 10,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
-          <h2 class="card-title">Flor 2</h2>
-          <span class="card-price">R$ 15,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
-          <h2 class="card-title">Flor 3</h2>
-          <span class="card-price">R$ 12,00 (por haste)</span>
-        </div>
-        <!-- Adicione mais cards aqui conforme necessário -->
-      </div>
-
-</section>
 
 <section class="aniversarios-casamentos">
     <div class="aniversarios-casamentos__container">
@@ -152,32 +110,17 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="/images/maes-1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="/images/maes-2.jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
-          <h2 class="card-title">Flor 3</h2>
-          <span class="card-price">R$ 12,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
-          <h2 class="card-title">Flor 1</h2>
-          <span class="card-price">R$ 10,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
-          <h2 class="card-title">Flor 2</h2>
-          <span class="card-price">R$ 15,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="/images/maes-3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
