--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 
-    <link rel="stylesheet" href="/style/paginas/home/home.css">
-    <link rel="stylesheet" href="/style/estilos-comuns/reset.css">
-    <link rel="stylesheet" href="/style/estilos-comuns/style.css">
+    <link rel="stylesheet" href="style/paginas/home/home.css">
+    <link rel="stylesheet" href="style/estilos-comuns/reset.css">
+    <link rel="stylesheet" href="style/estilos-comuns/style.css">
     <title>Home</title>
 </head>
 <body>
