--- a/arranjos-personalizados.html
+++ b/arranjos-personalizados.html
@@ -30,7 +30,7 @@
     <section class="imagem-titulo">
         <div class="titulo__imagem">
             <span class="imagem-titulo_principal">Arranjos Personalizados</span>
-            <img class="imagem__principal" src="/images/arranjos persona.jpeg" alt="">
+            <img class="imagem__principal" src="images/arranjos persona.jpeg" alt="">
         </div>
     </section>
 
@@ -42,17 +42,17 @@
 
         <div class="cards-container">
           <div class="card">
-            <img src="/images/florestropicais (22).jpeg" alt="Flor 1">
+            <img src="images/florestropicais (22).jpeg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/florestropicais (21).jpeg" alt="Flor 2">
+            <img src="images/florestropicais (21).jpeg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/florestropicais (14).jpeg" alt="Flor 3">
+            <img src="images/florestropicais (14).jpeg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -66,32 +66,32 @@
 
       <div class="cards-container">
           <div class="card">
-            <img src="/images/florestropicais (5).jpeg" alt="Flor 1">
+            <img src="images/florestropicais (5).jpeg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/florestropicais (6).jpeg" alt="Flor 2">
+            <img src="images/florestropicais (6).jpeg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/florestropicais (9).jpeg" alt="Flor 3">
+            <img src="images/florestropicais (9).jpeg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/florestropicais (12).jpeg" alt="Flor 1">
+            <img src="images/florestropicais (12).jpeg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/florestropicais (13).jpeg" alt="Flor 2">
+            <img src="images/florestropicais (13).jpeg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/florestropicais (15).jpeg" alt="Flor 3">
+            <img src="images/florestropicais (15).jpeg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -108,32 +108,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="/images/florestropicais (1).jpeg" alt="Flor 1">
+          <img src="images/florestropicais (1).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (10).jpeg" alt="Flor 2">
+          <img src="images/florestropicais (10).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (11).jpeg" alt="Flor 3">
+          <img src="images/florestropicais (11).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (12).jpeg" alt="Flor 1">
+          <img src="images/florestropicais (12).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (13).jpeg" alt="Flor 2">
+          <img src="images/florestropicais (13).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (15).jpeg" alt="Flor 3">
+          <img src="images/florestropicais (15).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
@@ -150,32 +150,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="/images/florestropicais (15).jpeg" alt="Flor 1">
+          <img src="images/florestropicais (15).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (16).jpeg" alt="Flor 2">
+          <img src="images/florestropicais (16).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (17).jpeg" alt="Flor 3">
+          <img src="images/florestropicais (17).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (18).jpeg" alt="Flor 1">
+          <img src="images/florestropicais (18).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (19).jpeg" alt="Flor 2">
+          <img src="images/florestropicais (19).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/florestropicais (20).jpeg" alt="Flor 3">
+          <img src="images/florestropicais (20).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
