--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 
-    <link rel="stylesheet" href="./style/paginas/login/login.css">
+    <link rel="stylesheet" href="style/paginas/login/login.css">
     
     <title>Faça Login</title>
   </head>
@@ -20,7 +20,7 @@
       <nav class="nav gridItem">
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="/index.html">Home</a></li>
+            <li><a class="nav-home" href="index.html">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
