--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <h2 class="inicial-text">Flores para todos os momentos especiais da sua vida</h2>
 
-        <img src="/images/logocomfundo.png" alt="">
+        <img src="images/logocomfundo.png" alt="">
 
         <div class="inicial-visit">
             <h2 class="inicial-visit-text">Visite nosso portifólio</h2>
@@ -53,32 +53,32 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="/images/florestropicais (22).jpeg" alt="Flor 1">
+              <img src="images/florestropicais (22).jpeg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/florestropicais (21).jpeg" alt="Flor 2">
+              <img src="images/florestropicais (21).jpeg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/florestropicais (14).jpeg" alt="Flor 3">
+              <img src="images/florestropicais (14).jpeg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
             <div class="card">
-                <img src="/images/florestropicais (15).jpeg" alt="Flor 1">
+                <img src="images/florestropicais (15).jpeg" alt="Flor 1">
                 <h2 class="card-title">Flor 1</h2>
                 <span class="card-price">R$ 10,00 (por haste)</span>
               </div>
               <div class="card">
-                <img src="/images/florestropicais (16).jpeg" alt="Flor 2">
+                <img src="images/florestropicais (16).jpeg" alt="Flor 2">
                 <h2 class="card-title">Flor 2</h2>
                 <span class="card-price">R$ 15,00 (por haste)</span>
               </div>
               <div class="card">
-                <img src="/images/florestropicais (17).jpeg" alt="Flor 3">
+                <img src="images/florestropicais (17).jpeg" alt="Flor 3">
                 <h2 class="card-title">Flor 3</h2>
                 <span class="card-price">R$ 12,00 (por haste)</span>
               </div>
@@ -107,14 +107,14 @@
 
         <div class="card__portifolio">
 
-          <img src="/images/florestropicais (6).jpeg" alt="Flor 3">
+          <img src="images/florestropicais (6).jpeg" alt="Flor 3">
           <a href="decorações-e-eventos.html">
             <h2 class="card__portifolio-title">Decorações e Eventos</h2></a>
           <span class="card__portifolio-price">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm</span>
         </div>
         
       <div class="card__portifolio">
-        <img clas src="/images/arranjospersonalizados.jpg" alt="Flor 3">
+        <img clas src="images/arranjospersonalizados.jpg" alt="Flor 3">
 
         <a href="arranjos-personalizados.html">
           <h2 class="card__portifolio-title">Arranjos Personalizados</h2></a>
@@ -122,7 +122,7 @@
       </div>
       
       <div class="card__portifolio">
-        <img src="/images/ocasioes-especiais.png" alt="Flor 3">
+        <img src="images/ocasioes-especiais.png" alt="Flor 3">
         <a href="ocasioes-especiais.html"><h2 class="card__portifolio-title">Ocasiões Especiais</h2></a>
         <span class="card__portifolio-price">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm</span>
       </div>
