--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
-
-    <link rel="stylesheet" href="style/paginas/login/login.css">
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style/paginas/login/login.css">
     
     <title>Faça Login</title>
   </head>
@@ -20,7 +20,7 @@
       <nav class="nav gridItem">
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="index.html">Home</a></li>
+            <li><a class="nav-home" href="/index.html">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
@@ -32,7 +32,7 @@
       <main class="main-um ">
         <div class="sub">
           <p>Lorem ipsum dolor sit amet, ullamco</p>
-          <button class="btn-sub">cadastrar</button>
+          <a href="/cadastro.html" class="btn-sub">cadastrar</a>
         </div>
       </main>
 
