--- a/arranjos-personalizados.html
+++ b/arranjos-personalizados.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
 
@@ -19,7 +21,7 @@
 
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="index.html">Home</a></li>
+            <li><a class="nav-home" href="">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
@@ -30,7 +32,7 @@
     <section class="imagem-titulo">
         <div class="titulo__imagem">
             <span class="imagem-titulo_principal">Arranjos Personalizados</span>
-            <img class="imagem__principal" src="images/arranjos persona.jpeg" alt="">
+            <img class="imagem__principal" src="/images/arranjos persona.jpeg" alt="">
         </div>
     </section>
 
@@ -42,17 +44,17 @@
 
         <div class="cards-container">
           <div class="card">
-            <img src="images/florestropicais (22).jpeg" alt="Flor 1">
+            <img src="/images/florestropicais (22).jpeg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (21).jpeg" alt="Flor 2">
+            <img src="/images/florestropicais (21).jpeg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (14).jpeg" alt="Flor 3">
+            <img src="/images/florestropicais (14).jpeg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -66,32 +68,32 @@
 
       <div class="cards-container">
           <div class="card">
-            <img src="images/florestropicais (5).jpeg" alt="Flor 1">
+            <img src="/images/florestropicais (5).jpeg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (6).jpeg" alt="Flor 2">
+            <img src="/images/florestropicais (6).jpeg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (9).jpeg" alt="Flor 3">
+            <img src="/images/florestropicais (9).jpeg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (12).jpeg" alt="Flor 1">
+            <img src="/images/florestropicais (12).jpeg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (13).jpeg" alt="Flor 2">
+            <img src="/images/florestropicais (13).jpeg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (15).jpeg" alt="Flor 3">
+            <img src="/images/florestropicais (15).jpeg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -108,32 +110,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="images/florestropicais (1).jpeg" alt="Flor 1">
+          <img src="/images/florestropicais (1).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (10).jpeg" alt="Flor 2">
+          <img src="/images/florestropicais (10).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (11).jpeg" alt="Flor 3">
+          <img src="/images/florestropicais (11).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (12).jpeg" alt="Flor 1">
+          <img src="/images/florestropicais (12).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (13).jpeg" alt="Flor 2">
+          <img src="/images/florestropicais (13).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (15).jpeg" alt="Flor 3">
+          <img src="/images/florestropicais (15).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
@@ -150,32 +152,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="images/florestropicais (15).jpeg" alt="Flor 1">
+          <img src="/images/florestropicais (15).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (16).jpeg" alt="Flor 2">
+          <img src="/images/florestropicais (16).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (17).jpeg" alt="Flor 3">
+          <img src="/images/florestropicais (17).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (18).jpeg" alt="Flor 1">
+          <img src="/images/florestropicais (18).jpeg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (19).jpeg" alt="Flor 2">
+          <img src="/images/florestropicais (19).jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (20).jpeg" alt="Flor 3">
+          <img src="/images/florestropicais (20).jpeg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
