--- a/decorações-e-eventos.html
+++ b/decorações-e-eventos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
 
@@ -19,7 +20,7 @@
 
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="index.html">Home</a></li>
+            <li><a class="nav-home" href="">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
@@ -30,7 +31,7 @@
     <section class="imagem-titulo">
         <div class="titulo__imagem">
             <span class="imagem-titulo_principal">Decorações e Eventos</span>
-            <img class="imagem__principal" src="images/deco.jpeg" alt="">
+            <img class="imagem__principal" src="/images/deco.jpeg" alt="">
         </div>
     </section>
 
@@ -42,23 +43,65 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="images/florestropicais (7).jpeg" alt="Flor 1">
+              <img src="/images/flor1.jpg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="images/flor-casamento.jpg" alt="Flor 2">
+              <img src="/images/flor2.jpg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="images/wedding-g4aa7ae428_1280.jpg" alt="Flor 3">
+              <img src="/images/flor3.jpg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
             <!-- Adicione mais cards aqui conforme necessário -->
           </div>
+
     </section>
+
+    <section class="aniversarios-casamentos">
+      <div class="aniversarios-casamentos__container">
+          <span class="aniversarios-casamento-titulo__principal"> Aniversários </span>
+      </div>
+
+      <div class="cards-container">
+          <div class="card">
+            <img src="/images/flor1.jpg" alt="Flor 1">
+            <h2 class="card-title">Flor 1</h2>
+            <span class="card-price">R$ 10,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor2.jpg" alt="Flor 2">
+            <h2 class="card-title">Flor 2</h2>
+            <span class="card-price">R$ 15,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor3.jpg" alt="Flor 3">
+            <h2 class="card-title">Flor 3</h2>
+            <span class="card-price">R$ 12,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor1.jpg" alt="Flor 1">
+            <h2 class="card-title">Flor 1</h2>
+            <span class="card-price">R$ 10,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor2.jpg" alt="Flor 2">
+            <h2 class="card-title">Flor 2</h2>
+            <span class="card-price">R$ 15,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="/images/flor3.jpg" alt="Flor 3">
+            <h2 class="card-title">Flor 3</h2>
+            <span class="card-price">R$ 12,00 (por haste)</span>
+          </div>
+          <!-- Adicione mais cards aqui conforme necessário -->
+        </div>
+
+  </section>
 
   <section class="aniversarios-casamentos">
     <div class="aniversarios-casamentos__container">
@@ -68,47 +111,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="images/florestropicais (2).jpeg" alt="Flor 1">
+          <img src="/images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (6).jpeg" alt="Flor 2">
+          <img src="/images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (7).jpeg" alt="Flor 3">
+          <img src="/images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/wedding-g4aa7ae428_1280.jpg" alt="Flor 1">
+          <img src="/images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/beach-gf8c4dcee9_1920.jpg" alt="Flor 2">
+          <img src="/images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/flor-casamento.jpg" alt="Flor 3">
-          <h2 class="card-title">Flor 3</h2>
-          <span class="card-price">R$ 12,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="images/floresdec-1.jpg" alt="Flor 3">
-          <h2 class="card-title">Flor 3</h2>
-          <span class="card-price">R$ 12,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="images/floresdec-2.jpg" alt="Flor 3">
-          <h2 class="card-title">Flor 3</h2>
-          <span class="card-price">R$ 12,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="images/floresdec-3.jpg" alt="Flor 3">
+          <img src="/images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
