--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
 
@@ -19,7 +19,7 @@
 
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="index.html">Home</a></li>
+            <li><a class="nav-home" href="">Home</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Portifólio</a></li>
             <li><a href="">Serviços</a></li>
@@ -30,7 +30,7 @@
     <section class="imagem-titulo">
         <div class="titulo__imagem">
             <span class="imagem-titulo_principal">Ocasiões Especiais</span>
-            <img class="imagem__principal" src="images/ocasioes.jpeg" alt="">
+            <img class="imagem__principal" src="/images/ocasioes.jpeg" alt="">
         </div>
     </section>
 
@@ -42,17 +42,17 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="images/namorados-11.jpg" alt="Flor 1">
+              <img src="/images/flor1.jpg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="images/maes-3.jpg" alt="Flor 2">
+              <img src="/images/flor2.jpg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="images/namorados-6.jpg" alt="Flor 3">
+              <img src="/images/flor3.jpg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
@@ -68,32 +68,32 @@
 
       <div class="cards-container">
           <div class="card">
-            <img src="images/namorados1.jpg" alt="Flor 1">
+            <img src="/images/flor1.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/namorados-2.jpg" alt="Flor 2">
+            <img src="/images/flor2.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/namorados-3.jpg" alt="Flor 3">
+            <img src="/images/flor3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/namorados-11.jpg" alt="Flor 1">
+            <img src="/images/flor1.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/namorados-5.jpg" alt="Flor 2">
+            <img src="/images/flor2.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/namorados-6.jpg" alt="Flor 3">
+            <img src="/images/flor3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -101,6 +101,48 @@
         </div>
 
   </section>
+
+  <section class="aniversarios-casamentos">
+    <div class="aniversarios-casamentos__container">
+        <span class="aniversarios-casamento-titulo__principal"> Avô e Avó </span>
+        <div class="aniversarios-casamentos-barra__inferior"></div>
+    </div>
+
+    <div class="cards-container">
+        <div class="card">
+          <img src="/images/flor1.jpg" alt="Flor 1">
+          <h2 class="card-title">Flor 1</h2>
+          <span class="card-price">R$ 10,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor2.jpg" alt="Flor 2">
+          <h2 class="card-title">Flor 2</h2>
+          <span class="card-price">R$ 15,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor3.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor1.jpg" alt="Flor 1">
+          <h2 class="card-title">Flor 1</h2>
+          <span class="card-price">R$ 10,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor2.jpg" alt="Flor 2">
+          <h2 class="card-title">Flor 2</h2>
+          <span class="card-price">R$ 15,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor3.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <!-- Adicione mais cards aqui conforme necessário -->
+      </div>
+
+</section>
 
 <section class="aniversarios-casamentos">
     <div class="aniversarios-casamentos__container">
@@ -110,17 +152,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="images/maes-1.jpg" alt="Flor 1">
+          <img src="/images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/maes-2.jpeg" alt="Flor 2">
+          <img src="/images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/maes-3.jpg" alt="Flor 3">
+          <img src="/images/flor3.jpg" alt="Flor 3">
+          <h2 class="card-title">Flor 3</h2>
+          <span class="card-price">R$ 12,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor1.jpg" alt="Flor 1">
+          <h2 class="card-title">Flor 1</h2>
+          <span class="card-price">R$ 10,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor2.jpg" alt="Flor 2">
+          <h2 class="card-title">Flor 2</h2>
+          <span class="card-price">R$ 15,00 (por haste)</span>
+        </div>
+        <div class="card">
+          <img src="/images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
