--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     ></script>
 
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style/paginas/home/home.css">
-    <link rel="stylesheet" href="/style/estilos-comuns/reset.css">
-    <link rel="stylesheet" href="/style/estilos-comuns/style.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/paginas/home/home.css">
+    <link rel="stylesheet" href="style/estilos-comuns/reset.css">
+    <link rel="stylesheet" href="style/estilos-comuns/style.css">
     <title>Home</title>
 </head>
 <body>
@@ -55,32 +55,32 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="/images/florestropicais (22).jpeg" alt="Flor 1">
+              <img src="images/florestropicais (22).jpeg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/florestropicais (21).jpeg" alt="Flor 2">
+              <img src="images/florestropicais (21).jpeg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/florestropicais (14).jpeg" alt="Flor 3">
+              <img src="images/florestropicais (14).jpeg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
             <div class="card">
-                <img src="/images/florestropicais (15).jpeg" alt="Flor 1">
+                <img src="images/florestropicais (15).jpeg" alt="Flor 1">
                 <h2 class="card-title">Flor 1</h2>
                 <span class="card-price">R$ 10,00 (por haste)</span>
               </div>
               <div class="card">
-                <img src="/images/florestropicais (16).jpeg" alt="Flor 2">
+                <img src="images/florestropicais (16).jpeg" alt="Flor 2">
                 <h2 class="card-title">Flor 2</h2>
                 <span class="card-price">R$ 15,00 (por haste)</span>
               </div>
               <div class="card">
-                <img src="/images/florestropicais (17).jpeg" alt="Flor 3">
+                <img src="images/florestropicais (17).jpeg" alt="Flor 3">
                 <h2 class="card-title">Flor 3</h2>
                 <span class="card-price">R$ 12,00 (por haste)</span>
               </div>
@@ -108,19 +108,19 @@
       <div class="portifolio-container">
 
         <div class="card__portifolio">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="images/flor3.jpg" alt="Flor 3">
           <h2 class="card__portifolio-title">Decorações e Eventos</h2>
           <span class="card__portifolio-price">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm</span>
         </div>
         
       <div class="card__portifolio">
-        <img clas src="/images/flor3.jpg" alt="Flor 3">
+        <img clas src="images/flor3.jpg" alt="Flor 3">
         <h2 class="card__portifolio-title">Arranjos Personalizados</h2>
         <span class="card__portifolio-price">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm</span>
       </div>
       
       <div class="card__portifolio">
-        <img src="/images/flor3.jpg" alt="Flor 3">
+        <img src="images/flor3.jpg" alt="Flor 3">
         <h2 class="card__portifolio-title">Ocasiões Especiais</h2>
         <span class="card__portifolio-price">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm</span>
       </div>
