--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style/paginas/login/login.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/paginas/login/login.css">
     
     <title>Faça Login</title>
   </head>
@@ -32,7 +32,7 @@
       <main class="main-um ">
         <div class="sub">
           <p>Lorem ipsum dolor sit amet, ullamco</p>
-          <a href="/cadastro.html" class="btn-sub">cadastrar</a>
+          <a href="cadastro.html" class="btn-sub">cadastrar</a>
         </div>
       </main>
 
