--- a/cadastro.html
+++ b/cadastro.html
@@ -8,11 +8,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 
-    <link rel="stylesheet" href="./style/paginas/login/cadastro.css">
+    <link rel="stylesheet" href="style/paginas/login/cadastro.css">
     
     <title>Cadastre-se</title>
   </head>
